-----------------------------------------------------------------------------------------
	$Id$
-----------------------------------------------------------------------------------------

2011-11-12	pwessel
	* gmtmercmap.c:		New example of API use: Create a shaded-relief Mercator map using
				Etopo 1|2|5m global relief, with optional colorbar.
	* gmt_support.c:	Resampling of CPTs did not initialize the i_dz variables, resulting
				in discontinuous colors for continuous color maps.

2011-11-11	remko
	* pslib.c:		Fixed error in PSL_message (wrong verbosity handling)

2011-11-11	pwessel
	* gmtapi_util.c:	Introduce GMT_Retrieve_Data to return a pointer to a container
				that was allocated when a memory location was registered as the
				output.  Reduced GMT_Begin_IO to only apply to rec-by-rec i/o,
				hence we could remove the mode variable.  GMT_Register_IO now
				expects the pointer to the resource, not the pointer address.

2011-11-09	pwessel
	* gmtapi_util.c:	Let GMT_Get_Record's third argument (*n_fields) only return
				the number of fields if it is not NULL.

2011-11-08	pwessel
	* *.c:			All modules using GMT_Get_Data are now checking for a NULL
				return, and only then checking status.  This minimizes the
				number of checks during the processing of a data set.

2011-11-05	pwessel
	* gmtapi_util.c:	Added GMT_Write_Data and GMT_Read_Data which deals with
				files/streams, and GMT_Get_Data, GMT_Put_Data now work
				explicitly with registered object IDs.
				Test all return codes from API and give proper errors.
2011-10-29	pwessel
	* gmtapi_parse.c:	API finalized.  Simplified by let all functions that
				produce objects (Make, Find, Append) return a pointer to those objects.

2011-10-28	pwessel
	* gmtapi_util.c:	API finalized.  Simplified by eliminating unneeded arguments
				to GMT_Create_Data, GMT_Register_IO, and let all functions that
				produce objects (Create, Get) return a pointer to those objects.